--- a/src/main/resources/persistence-mysql.properties
+++ b/src/main/resources/persistence-mysql.properties
@@ -5,7 +5,6 @@ jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost/spring_customer_tracker
 jdbc.user=root
 jdbc.password=
-
 #
 # Connection pool properties
 #
@@ -13,8 +12,7 @@ connection.pool.initialPoolSize=5
 connection.pool.minPoolSize=5
 connection.pool.maxPoolSize=20
 connection.pool.maxIdleTime=3000
-
 # Hibernate
-hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
-hibernate.show_sql: true
-hibernate.hbm2ddl.auto: create
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=create
